--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			</div>
 		</div>
 
-		<p class="author">Coded By <a href="https://portfolio-f576a.web.app/" target="_blank">Ganiu Ibrahim Olalekan</a></p>
+		<p class="author">Coded By <a href="https://ganiuportfolio.vercel.app/" target="_blank">Ganiu Ibrahim Olalekan</a></p>
 	</footer>
 
 	<script type="text/javascript" src="script.js"></script>
